--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,11 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/founder-mode"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+DISCORD_CLIENT_ID="1294029220250390600"
+DISCORD_CLIENT_SECRET="ca5cM89S3MOIzdT2is764SS2deDMwQjk"
+
+# Dev only
+DB_DATABASE="founder-mode"
+DB_USERNAME="postgres"
+DB_PASSWORD="password"
+DB_PORT="5432"
