--- a/.env.example
+++ b/.env.example
@@ -21,8 +21,8 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/founder-mode"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID="1294029220250390600"
-DISCORD_CLIENT_SECRET="ca5cM89S3MOIzdT2is764SS2deDMwQjk"
+DISCORD_CLIENT_ID=""
+DISCORD_CLIENT_SECRET=""
 
 # Dev only
 DB_DATABASE="founder-mode"
