--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,9 @@ DATABASE_URL="postgresql://postgres:password@localhost:5432/founder-mode"
 # NEXTAUTH_SECRET=""
 NEXTAUTH_URL="http://localhost:3000"
 
+APP_NAME="Founder Mode"
+APP_URL="http://localhost:3000"
+
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
