--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,10 @@ APP_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
-
+# Stripe
+STRIPE_SECRET_KEY=""
+STRIPE_WEBHOOK_SECRET=""
+DISCORD_WEBHOOK_STRIPE=""
 # Dev only
 DB_DATABASE="founder-mode"
 DB_USERNAME="postgres"
