--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "remark-gfm": "^4.0.0",
     "resend": "^4.0.0",
     "server-only": "^0.0.1",
+    "stripe": "^17.2.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7",
