--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha-v3": "^1.10.1",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
