--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+
 # Since the ".env" file is gitignored, you can use the ".env.example" file to
 # build a new ".env" file when you clone the repo. Keep this file up-to-date
 # when you add new variables to `.env`.
@@ -26,12 +27,19 @@ APP_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+# Mail Provider
+# Possible values: RESEND, CONSOLE, you can also use CONSOLE,RESEND to use both
+MAIL_PROVIDER="CONSOLE"
+
+# Contact Settings
+CONTACT_DISCORD_WEBHOOK_URL=""
+
+# reCAPTCHA
+RECAPTCHA_SECRET_KEY=""
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=""
+
 # Stripe
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
 DISCORD_WEBHOOK_STRIPE=""
-# Dev only
-DB_DATABASE="founder-mode"
-DB_USERNAME="postgres"
-DB_PASSWORD="password"
-DB_PORT="5432"
