fixed stripecli for ubuntu

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,5 @@ NEXT_PUBLIC_RECAPTCHA_SITE_KEY=""
 STRIPE_SECRET_KEY=""
 STRIPE_WEBHOOK_SECRET=""
 DISCORD_WEBHOOK_STRIPE=""
+# For native Linux systems when testing webhooks with stripecli docker container
+DOCKER_HOST_IP=172.17.0.1
