--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,15 @@ services:
     image: stripe/stripe-cli:latest
     volumes:
       - ~/.stripe:/root/.stripe
-    command: listen --forward-to host.docker.internal:3000/api/webhooks/stripe
+    # This configuration allows the Stripe CLI to forward webhooks to the host machine
+    # on both WSL and native Linux systems. For native Linux (e.g., Ubuntu), set the
+    # DOCKER_HOST_IP environment variable in your .env file to your host's IP (usually 172.17.0.1).
+    # The extra_hosts setting ensures host.docker.internal resolves correctly on Linux.
+    command: listen --forward-to ${DOCKER_HOST_IP:-host.docker.internal}:3000/api/webhooks/stripe
     network_mode: "host"
     profiles: ["dev"]
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
 volumes:
   psql_volume:
